# sv-fmt

./: Cargo.toml  PLAN.md  README.md  sv-fmt.example.toml
src/: config.rs  formatter.rs  lib.rs  main.rs  parser.rs
src/formatter/: analysis.rs  emitter.rs  engine.rs  lexer.rs  mod.rs  wrapping.rs
tests/: cli_check.rs  formatter.rs
tests/fixtures/formatted/: assertion.sv  case_block.sv  comments.sv  covergroup.sv  randcase.sv  randsequence.sv
tests/fixtures/formatted/nested/: loop.sv
tests/fixtures/unformatted/: assertion.sv  case_block.sv  comments.sv  covergroup.sv  randcase.sv  randsequence.sv
tests/fixtures/unformatted/nested/: loop.sv
