[package]
name = "sv-fmt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sv-parser = "0.13"
toml = "0.8"
walkdir = "2.4"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
